Changed to using NextJS + shadcn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,59 @@
 [project]
 name = "ryagent"
 version = "0.1.0"
-description = "Your personal multi-agent operator"
+description = "Local Python daemon serving multiple LLM agents with React web UI"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "rich>=14.1.0",
-    "textual>=5.3.0",
-    "openai>=1.0.0",
-    "toml>=0.10.2",
-    "aiofiles>=24.0.0",
-    "python-dotenv>=1.1.1",
+license = { text = "AGPL-3.0" }
+requires-python = ">=3.11"
+authors = [
+    { name = "RyAgent Team" }
 ]
 
-[project.scripts]
-ry = "ryagent.main:main"
+dependencies = [
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "pydantic>=2.4.0",
+    "python-dotenv>=1.0.0",
+    "structlog>=23.2.0",
+]
 
 [dependency-groups]
 dev = [
-    "black>=25.1.0",
-    "mypy>=1.17.1",
-    "pytest>=8.4.1",
-    "pytest-asyncio>=1.1.0",
-    "ruff>=0.12.10",
+    "ruff>=0.1.0",
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "httpx>=0.25.0",  # Required for FastAPI TestClient
 ]
+
+[project.scripts]
+ryagentd = "ryagent.main:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by formatter
+]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
